--- a/main-cart.liquid
+++ b/main-cart.liquid
@@ -198,7 +198,7 @@
                 </div>
                 
                 <cart-note class="cart-note block lightly-spaced-row">
-                  <label class="block" for="note">Comentar la aplicación</label>
+                  <label class="block" for="note">Déjanos tu comentario sobre el evento</label>
                   <textarea id="note" name="note" style="width: 100% !important;"></textarea>
                 </cart-note>
                 
