--- a/main-cart.liquid
+++ b/main-cart.liquid
@@ -25,7 +25,7 @@
   for item in cart.items
     for collection in item.product.collections
       # Replace with an arr of collections
-      if collection.handle == "my-test-collection"
+      if collection.handle == "decoracion-de-eventos"
         assign has_event_service = true
       endif
     endfor
